<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">juan_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_remove_game">Remove Game</string>
<string name="lbl_game_name">Game Name</string>
<string name="msg_game_descriptio">Game Description</string>
<string name="lbl_link_game">Link Game!</string>
<string name="lbl_bio">Bio</string>
<string name="lbl_bio2">BIO</string>
<string name="msg_confirm_passwor">Confirm Password</string>
<string name="lbl_new_user">New User?</string>
<string name="lbl_password">password</string>
<string name="lbl_friends">Friends</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec mi a dolor vulputate gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tempus scelerisque ante, quis...</string>
<string name="lbl_name">Name</string>
<string name="msg_i_consent_to_ra">I consent to RankCheck to access my data</string>
<string name="lbl_games">GAMES</string>
<string name="lbl_login">login</string>
<string name="lbl_username">Username</string>
<string name="lbl_register">Register!</string>
<string name="lbl_game_title">Game Title</string>
<string name="lbl_username2">{username}</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
