<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginPageVM" type="com.juansapplication.app.modules.loginpage.data.viewmodel.LoginPageVM"/>
    </data>
    <LinearLayout android:gravity="end"
        android:id="@+id/linearLoginPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_100">
        <ImageView android:id="@+id/imageOutputonlinepn"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_233pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_211pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_outputonlinepn}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_outputonlinepn"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_4"
            android:drawablePadding="@dimen/_23pxh"
            android:drawableStart="@drawable/img_user"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etUsername" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={loginPageVM.loginPageModel.etUsernameValue}"
            android:textAllCaps="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_4"
            android:drawablePadding="@dimen/_22pxh"
            android:drawableStart="@drawable/img_lock"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={loginPageVM.loginPageModel.etPasswordValue}"
            android:textAllCaps="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_45pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_177pxh"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="true"
            style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end" android:id="@+id/txtNewUser"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_29pxv"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_91pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{loginPageVM.loginPageModel.txtNewUser}"
            android:textAllCaps="true"
            style="@style/txtMontserratsemibold16" tools:text="@string/lbl_new_user"/>
    </LinearLayout>
</layout>
