<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registrationPageVM" type="com.juansapplication.app.modules.registrationpage.data.viewmodel.RegistrationPageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegistrationPa"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_100">
        <ImageView android:id="@+id/imageOutputonlinepn"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_233pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="@dimen/_211pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_outputonlinepn}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_outputonlinepn"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearUsername"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylecornerRadius">
            <ImageView android:id="@+id/imageUser"
                android:layout_height="@dimen/_15pxh"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="@dimen/_13pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_user"
                tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtUsername"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_165pxh"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_weight="0.86" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{registrationPageVM.registrationPageModel.txtUsername}"
                android:textAllCaps="true"
                style="@style/txtMontserratlight14" tools:text="@string/lbl_username"/>
        </LinearLayout>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_4"
            android:drawablePadding="@dimen/_22pxh"
            android:drawableStart="@drawable/img_lock"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={registrationPageVM.registrationPageModel.etPasswordValue}"
            android:textAllCaps="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_4"
            android:drawablePadding="@dimen/_21pxh"
            android:drawableStart="@drawable/img_lock"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwor"
            android:id="@+id/etPasswordOne"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={registrationPageVM.registrationPageModel.etPasswordOneValue}"
            android:textAllCaps="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegister"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_45pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_53pxv"
            android:layout_width="@dimen/_177pxh"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="true" style="@style/btnSolidRounded" tools:text="@string/lbl_register"/>
    </LinearLayout>
</layout>
