<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="gameLinkPageVM" type="com.juansapplication.app.modules.gamelinkpage.data.viewmodel.GameLinkPageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearGameLinkPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearRowuser"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylebluegray_100">
            <ImageView android:id="@+id/imageUser"
                android:layout_height="@dimen/_81pxh"
                android:layout_marginBottom="@dimen/_30pxv"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_80pxv"
                android:layout_width="@dimen/_84pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_user_red_a700"
                tools:ignore="ContentDescription" tools:src="@drawable/img_user_red_a700"/>
            <LinearLayout android:id="@+id/linearColumnremovegame"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_4pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_weight="0.74" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end" android:gravity="end"
                    android:id="@+id/txtRemoveGame"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{gameLinkPageVM.gameLinkPageModel.txtRemoveGame}"
                    android:textAllCaps="true"
                    style="@style/txtMontserratsemibold16" tools:text="@string/lbl_remove_game"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnGameName"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_36pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_game_name"
                    android:textAllCaps="true"
                    style="@style/btnRoundedOutline" tools:text="@string/lbl_game_name"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnGameDescriptionOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_23pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/msg_game_descriptio"
                    android:textAllCaps="true"
                    style="@style/btnRoundedOutline" tools:text="@string/msg_game_descriptio"/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_4"
            android:drawablePadding="@dimen/_23pxh"
            android:drawableStart="@drawable/img_user"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etUsername" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_107pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={gameLinkPageVM.gameLinkPageModel.etUsernameValue}"
            android:textAllCaps="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_black_900_radius_4"
            android:drawablePadding="@dimen/_22pxh"
            android:drawableStart="@drawable/img_lock"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={gameLinkPageVM.gameLinkPageModel.etPasswordValue}"
            android:textAllCaps="true"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:buttonTint="@color/black_900"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:id="@+id/checkBoxIconsenttoRa"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingStart="@dimen/_7pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@string/msg_i_consent_to_ra"
            android:textAllCaps="true"
            android:textColor="@color/black_900"
            android:textFontWeight="300"
            android:textSize="@dimen/_10pxh" android:textStyle="bold" tools:text="@string/msg_i_consent_to_ra"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLinkGame"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_45pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="@dimen/_177pxh"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_link_game"
            android:textAllCaps="true" style="@style/btnSolidRounded" tools:text="@string/lbl_link_game"/>
        <LinearLayout android:id="@+id/linearNavBar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylebluegray_100">
            <FrameLayout android:id="@+id/frameStackhome"
                android:layout_height="@dimen/_38pxv"
                android:layout_width="@dimen/_90pxh" style="@style/groupStylebluegray_101">
                <ImageView android:id="@+id/imageHome"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_38pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
            </FrameLayout>
            <FrameLayout android:id="@+id/frameStackmaximize"
                android:layout_height="@dimen/_38pxv"
                android:layout_width="@dimen/_90pxh" style="@style/groupStylebluegray_101">
                <ImageView android:id="@+id/imageMaximize"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_31pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginEnd="@dimen/_23pxh"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_33pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_maximize"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_maximize"/>
            </FrameLayout>
            <FrameLayout android:id="@+id/frameStacksearch"
                android:layout_height="@dimen/_38pxv"
                android:layout_width="@dimen/_90pxh" style="@style/groupStylebluegray_101">
                <ImageView android:id="@+id/imageSearch"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_36pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_search"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_search"/>
                <ImageView android:id="@+id/imageUserOne"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_22pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user_gray_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user_gray_900"/>
            </FrameLayout>
            <FrameLayout android:id="@+id/frameStackuserTwo"
                android:layout_height="@dimen/_38pxv"
                android:layout_width="@dimen/_90pxh" style="@style/groupStylebluegray_101">
                <ImageView android:id="@+id/imageUserTwo"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_27pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginEnd="@dimen/_26pxh"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_30pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user_gray_900_27x30"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user_gray_900_27x30"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
